--- a/index.html
+++ b/index.html
@@ -11,20 +11,7 @@
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/stellar/jquery.stellar.min.js"></script>
 	<script type="text/javascript" src="bower_components/tooltipster/js/jquery.tooltipster.min.js"></script>
-	<script type="text/javascript">
-		$(function(){
-			$.stellar({
-				horizontalScrolling: false,
-				verticalOffset: 40
-			});
-		});
-
-		$(document).ready(function() {
-            $('.tooltip').tooltipster({
-            	position: "bottom"
-            });
-        });
-	</script>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
