--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="bower_components/stellar/jquery.stellar.min.js"></script>
 	<script type="text/javascript" src="bower_components/tooltipster/js/jquery.tooltipster.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
