--- a/index.html
+++ b/index.html
@@ -63,13 +63,25 @@
 
 		<!-- me -->
 		<div class="parallaxMe" data-stellar-background-ratio="0.5">
-			<div class="connect center-bottom">
+			<div class="row">
+			    <div class="col-md-4 col-md-offset-4 connect center-bottom">
+					<a href="https://github.com/tylerl0706" class="tooltip" title="GitHub"><i class="fa fa-github-square fa-3x margin-right-and-left"></i></a>
+					<a href="https://www.linkedin.com/in/tylerjamesleonhardt" class="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x margin-right-and-left"></i></a>
+					<a href="https://plus.google.com/+TylerJamesLeonhardt" class="tooltip" title="Google+"><i class="fa fa-google-plus-square fa-3x margin-right-and-left"></i></a>
+					<a href="https://drive.google.com/file/d/0Bzvq50_jhyTbZ1JxOG11N0J5bXc/view?usp=sharing" class="tooltip" title="Resume"><i class="fa fa-external-link-square fa-3x margin-right-and-left"></i></a>
+					<div class="margin-top font-size-14">Connect with me?</div>
+				</div>
+			</div>
+
+
+
+			<!-- <div class="connect center-bottom">
 				<a href="https://github.com/tylerl0706" class="tooltip" title="GitHub"><i class="fa fa-github-square fa-3x margin-right-and-left"></i></a>
 				<a href="https://www.linkedin.com/in/tylerjamesleonhardt" class="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x margin-right-and-left"></i></a>
 				<a href="https://plus.google.com/+TylerJamesLeonhardt" class="tooltip" title="Google+"><i class="fa fa-google-plus-square fa-3x margin-right-and-left"></i></a>
 				<a href="https://drive.google.com/file/d/0Bzvq50_jhyTbZ1JxOG11N0J5bXc/view?usp=sharing" class="tooltip" title="Resume"><i class="fa fa-external-link-square fa-3x margin-right-and-left"></i></a>
 				<div class="margin-top font-size-14">Connect with me?</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </body>
