--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<script type="text/javascript" src="bower_components/tooltipster/js/jquery.tooltipster.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>Tyler Leonhardt</title>
 </head>
 
 <body>
