--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<link rel="manifest" href="images/favicon/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
-	
+	<meta name="theme-color" content="#272822">
+
 	<link rel="stylesheet" type="text/css" href="bower_components/tooltipster/css/tooltipster.css"/>
 	<link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
 <body>
 	<!-- code -->
 	<div class="parallax1" data-stellar-background-ratio="1"></div>
-		
+
 	<div style="padding-top:7px;">
 
 		<!-- hello world -->
@@ -45,11 +45,11 @@
 			<div class="center-middle">Hello World!</div>
 			<div class="center-bottom"><i class="fa fa-sort-desc"></i></div>
 		</div>
-		
+
 		<!-- shadow -->
 		<div class="parallax3" data-stellar-background-ratio="0.5">
 			<div class="container">
-				
+
 				<div class="col-md-4 card">
 					<i class="fa fa-book fa-3x center-icon"></i>
 					<div class="heading">I'm a Computer Science Major at the University of Central Florida!</div>
@@ -58,14 +58,14 @@
 
 			</div>
 		</div>
-		
+
 		<!-- blank -->
 		<div class="container center-text"></div>
 
 		<!-- ceiling -->
 		<div class="parallax2" data-stellar-background-ratio="0.5">
 			<div class="container">
-			
+
 				<div class="col-md-offset-8 col-md-4 card">
 					<i class="fa fa-laptop fa-3x center-icon"></i>
 					<div class="heading">I code everyday! And I love it!</div>
