--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="manifest" href="images/favicon/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ECDC6C">
+	<meta name="theme-color" content="#177246">
 
 	<link rel="stylesheet" type="text/css" href="bower_components/tooltipster/css/tooltipster.css"/>
 	<link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
