--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 			<div class="container">
 
 				<div class="col-md-4 card">
-					<i class="fa fa-book fa-3x center-icon"></i>
-					<div class="heading">I'm a Computer Science Major at the University of Central Florida!</div>
-					<p>I love technology! More specifically, I have a passion in web app development, mobile development and the future of wearables.</p>
+					<i class="fa fa-windows fa-3x center-icon"></i>
+					<div class="heading">I'm a Software Engineer at Microsoft.</div>
+					<p>I like web development, dev ops, and coffee that has the word "mouthfeel" on the packaging.</p>
 				</div>
 
 			</div>
@@ -68,9 +68,9 @@
 
 				<div class="col-md-offset-8 col-md-4 card">
 					<i class="fa fa-laptop fa-3x center-icon"></i>
-					<div class="heading">I code everyday! And I love it!</div>
-					<p>Like learning any language, practice makes perfect! I try to code everyday, mainly side projects outside of school.</p>
-					<p>My favorite programming languages are JavaScript and Java!</p>
+					<div class="heading">I code everyday - and love it</div>
+					<p>Whether it's at work, on a bus, at a coffee shop, or in my own home.</p>
+					<p>Check out my Github for what I'm up to.</p>
 				</div>
 
 
@@ -86,7 +86,7 @@
 			    <div class="col-md-4 col-md-offset-4 connect center-bottom">
 					<a target="_new" href="https://github.com/tylerl0706" class="tooltip" title="GitHub"><i class="fa fa-github-square fa-3x margin-right-and-left"></i></a>
 					<a target="_new" href="https://www.linkedin.com/in/tylerjamesleonhardt" class="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-3x margin-right-and-left"></i></a>
-					<a target="_new" href="https://plus.google.com/+TylerJamesLeonhardt" class="tooltip" title="Google+"><i class="fa fa-google-plus-square fa-3x margin-right-and-left"></i></a>
+					<a target="_new" href="https://twitter.com/TylerLeonhardt" class="tooltip" title="Twitter"><i class="fa fa-twitter-square fa-3x margin-right-and-left"></i></a>
 					<a target="_new" href="https://drive.google.com/file/d/0Bzvq50_jhyTbcVFxcWhsb0dTRnM/view?usp=sharing" class="tooltip" title="Resume"><i class="fa fa-external-link-square fa-3x margin-right-and-left"></i></a>
 					<div class="margin-top font-size-14">Connect with me?</div>
 				</div>
