--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-xs"><img src="https://cdn0.iconfinder.com/data/icons/shift-logotypes/32/Microsoft-512.png" style="display: inline;" width="40px" alt=""></div>
         </div>
         <br/>
-        <h1 style="max-width: 400px; margin: 0 auto;">I work on the PowerShell team at Microsoft.<br/><br/> All my work is <a class="github hoverease" href="https://github.com/tylerl0706">open source</a>. Sometimes people give me a mic and I talk about 💻.<br/><br/> I also like ☕️ with the word "mouthfeel" on the packaging.</h1>
+        <h1 style="max-width: 400px; margin: 0 auto;">I work on the <a class="powershell hoverease" href="https://github.com/tylerl0706">PowerShell</a> team at Microsoft.<br/><br/> All my work is <a class="github hoverease" href="https://github.com/tylerl0706">open source</a>. Sometimes people give me a mic and I talk about 💻.<br/><br/> I also like ☕️ with the word "mouthfeel" on the packaging.</h1>
         <br/>
         <br/>
         <br/>
