don't rely on other sites

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <meta charset="UTF-8">
 
     <!-- bring in flexbox and font awesome -->
-    <!-- TODO: pull these in from npm -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="/node_modules/flexboxgrid/dist/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css" >
 
     <!-- General Styles -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -48,8 +47,7 @@
                 <i class="fas fa-at" style="font-size: 40px"></i>
             </div>
             <div class="col-xs">
-                <!-- TODO: download image -->
-                <img src="https://cdn0.iconfinder.com/data/icons/shift-logotypes/32/Microsoft-512.png" style="display: inline;" width="40px" alt="">
+                <img src="img/Microsoft-512.png" style="display: inline;" width="40px" alt="">
             </div>
         </div>
         <br/>
