--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <meta charset="UTF-8">
 
     <!-- bring in flexbox and font awesome -->
-    <link rel="stylesheet" href="/node_modules/flexboxgrid/dist/flexboxgrid.min.css" type="text/css" >
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css" >
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" >
 
     <!-- General Styles -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
