--- a/index.html
+++ b/index.html
@@ -53,18 +53,22 @@
         <br/>
         <br/>
         <h2 class="centered fade-in seven" style="max-width: 400px;">
-            I work on the <a class="powershell hoverease" href="https://github.com/tylerl0706">PowerShell</a> team at Microsoft.
+            I work on the <a class="powershell hoverease" href="https://github.com/PowerShell">PowerShell</a> team at Microsoft.
             <br/><br/>
-            All my work is <a class="github hoverease" href="https://github.com/tylerl0706">open source</a>. 
-            Sometimes people give me a mic and I talk about 💻.
+            All my work is <a class="github hoverease" href="https://github.com/TylerLeonhardt">open source</a>.
+            <br/><br/>
+            Sometimes people give me a mic and I talk about 💻. You can also find me on <a class="twitch hoverease" href="https://twitch.tv/TylerLeonhardt">Twitch</a> live-coding projects of all kinds.
             <br/><br/>
             I also like ☕️ with the word "mouthfeel" on the packaging.</h2>
         <br/><br/><br/><br/>
     </main>
     <footer>
         <div class="centered row" style="max-width: 500px;">
+            <div class="col-xs fade-in nine">
+                <a class="box fab fa-twitch connect hoverease" href="https://twitch.tv/TylerLeonhardt"></a>
+            </div>
             <div class="col-xs fade-in ten">
-                <a class="box fab fa-github connect hoverease" href="https://github.com/tylerl0706"></a>
+                <a class="box fab fa-github connect hoverease" href="https://github.com/TylerLeonhardt"></a>
             </div>
             <div class="col-xs fade-in eleven">
                 <a class="box fab fa-twitter connect hoverease" href="https://twitter.com/TylerLeonhardt"></a>
