- package.json + licesnse and redirect for .live

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script>
+        if (window.location.href.indexOf('tylerleonhardt.live') !== -1) {
+            window.location.href = "https://twitch.tv/TylerLeonhardt"
+        }
+    </script>
     <!-- Favicons and title -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
