--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 <body>
     <main>
         <p class="fade-in one" style="font-size: 40px">👋</p>
-        <p><img src="img/headshot.jpg" alt="headshot" width="200" height="200" class="headshot fade-in four"></p>
+        <p><img src="img/headshot.jpeg" alt="headshot" width="200" height="200" class="headshot fade-in four"></p>
         <h1 class="fade-in four">I'm Tyler</h1>
         <br/>
         <div class="centered row fade-in six" style="max-width: 300px;">
             <div class="col-xs">
-                <a class="fas fa-terminal" style="font-size: 40px; color:#4F88E7" href="https://github.com/powershell"></a>
+                <img src="img/vscode.png" style="display: inline;" width="40px" alt="">
             </div>
             <div class="col-xs">
                 <i class="fas fa-at" style="font-size: 40px"></i>
@@ -58,13 +58,13 @@
         <br/>
         <br/>
         <h2 class="centered fade-in seven" style="max-width: 400px;">
-            I work on the <a class="powershell hoverease" href="https://github.com/PowerShell">PowerShell</a> team at Microsoft.
+            I work on the <a class="vscode hoverease" href="https://github.com/Microsoft/vscode">VS Code</a> team at Microsoft.
             <br/><br/>
             All my work is <a class="github hoverease" href="https://github.com/TylerLeonhardt">open source</a>.
             <br/><br/>
             Sometimes people give me a mic and I talk about 💻. You can also find me on <a class="twitch hoverease" href="https://twitch.tv/TylerLeonhardt">Twitch</a> live-coding projects of all kinds.
             <br/><br/>
-            I also like ☕️ with the word "mouthfeel" on the packaging.</h2>
+            I also like <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">☕️ with the word "mouthfeel" on the packaging.</a></h2>
         <br/><br/><br/><br/>
     </main>
     <footer>
