--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <br/><br/>
             Sometimes people give me a mic and I talk about 💻. You can also find me on <a class="twitch hoverease" href="https://twitch.tv/TylerLeonhardt">Twitch</a> live-coding projects of all kinds.
             <br/><br/>
-            I also like <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">☕️ with the word "mouthfeel" on the packaging.</a></h2>
+            I also <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">like ☕️</a> with the word "mouthfeel" on the packaging.</h2>
         <br/><br/><br/><br/>
     </main>
     <footer>
