Update styles, enhance layout, and add project documentation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- bring in flexbox and font awesome -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" >
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" >
 
     <!-- General Styles -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -41,39 +41,38 @@
 <body>
     <main>
         <p class="fade-in one" style="font-size: 40px">👋</p>
-        <p><img src="img/headshot.jpeg" alt="headshot" width="200" height="200" class="headshot fade-in four"></p>
-        <h1 class="fade-in four">I'm Tyler</h1>
-        <br/>
-        <div class="centered row fade-in six" style="max-width: 300px;">
+        <p><img src="img/headshot.jpeg" alt="headshot" width="125" height="125" class="headshot fade-in-up four"></p>
+        <div class="card fade-in-up six">
+        <h1>I'm Tyler</h1>
+        <div class="centered row logo-icons" style="max-width: 200px;">
+            <div class="col-xs" style="font-size: 40px">🤖</div>
+            <div class="col-xs" style="font-size: 40px">+</div>
             <div class="col-xs">
                 <img src="img/vscode.png" style="display: inline;" width="40px" alt="">
-            </div>
-            <div class="col-xs">
-                <i class="fas fa-at" style="font-size: 40px"></i>
-            </div>
-            <div class="col-xs">
-                <img src="img/Microsoft-512.png" style="display: inline;" width="40px" alt="">
             </div>
         </div>
         <br/>
         <br/>
-        <h2 class="centered fade-in seven" style="max-width: 400px;">
-            I work on the <a class="vscode hoverease" href="https://github.com/Microsoft/vscode">VS Code</a> team at Microsoft.
+        <h2 class="centered" style="max-width: 400px; font-size: 1.1em;">
+            I work on the <a class="vscode hoverease" href="https://github.com/Microsoft/vscode">VS Code</a> team at Microsoft, where I build VS Code & GitHub Copilot.
             <br/><br/>
             All my work is <a class="github hoverease" href="https://github.com/TylerLeonhardt">open source</a>.
             <br/><br/>
-            Sometimes people give me a mic and I talk about 💻. You can also find me on <a class="twitch hoverease" href="https://twitch.tv/TylerLeonhardt">Twitch</a> live-coding projects of all kinds.
+            Sometimes people give me a mic and I talk about 💻.
+            <hr style="border: none; border-top: 1px solid #ddd; margin: 1.5em 0;"/>
+            I do improv with <a class="twitch hoverease" href="https://www.cszseattle.com/">CSz Seattle</a> & <a class="twitch hoverease" href="https://dollbrick.com/">Dollbrick</a>.
             <br/><br/>
             I also <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">like ☕️</a> with the word "mouthfeel" on the packaging.</h2>
-        <br/><br/><br/><br/>
+        <br/><br/>
+        </div>
     </main>
     <footer>
         <div class="centered row" style="max-width: 500px;">
             <div class="col-xs fade-in nine">
-                <a class="box fab fa-twitch connect hoverease" href="https://twitch.tv/TylerLeonhardt"></a>
+                <a class="box fab fa-github connect hoverease" href="https://github.com/TylerLeonhardt"></a>
             </div>
             <div class="col-xs fade-in ten">
-                <a class="box fab fa-github connect hoverease" href="https://github.com/TylerLeonhardt"></a>
+                <a class="box fab fa-bluesky connect hoverease" href="https://bsky.app/profile/tylerleonhardt.dev"></a>
             </div>
             <div class="col-xs fade-in eleven">
                 <a class="box fab fa-twitter connect hoverease" href="https://twitter.com/TylerLeonhardt"></a>
