--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
             <br/><br/>
             All my work is <a class="github hoverease" href="https://github.com/TylerLeonhardt">open source</a>.
             <br/><br/>
-            Sometimes people give me a mic and I talk about 💻.
+            Sometimes people give me a 🎤 and I talk about 💻
             <hr style="border: none; border-top: 1px solid #ddd; margin: 1.5em 0;"/>
-            I do improv with <a class="twitch hoverease" href="https://www.cszseattle.com/">CSz Seattle</a> & <a class="twitch hoverease" href="https://dollbrick.com/">Dollbrick</a>.
+            I also do improv with <a class="twitch hoverease" href="https://www.cszseattle.com/">CSz Seattle</a> & <a class="twitch hoverease" href="https://dollbrick.com/">Dollbrick</a>.
             <br/><br/>
-            I also <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">like ☕️</a> with the word "mouthfeel" on the packaging.</h2>
+            Big <a class="coffee hoverease" href="https://www.instagram.com/coffeeartbytyler/">fan of ☕️</a> with the word "mouthfeel" on the packaging.</h2>
         <br/><br/>
         </div>
     </main>
